# boost.taar

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  fuzzing_profile
boost/taar/core/: always_false.hpp  async_generator.hpp  awaitable.hpp  callable_traits.hpp  cancellation_signals.hpp  chunk_body_from.hpp  chunk_body_from_tag.hpp  chunked_response.hpp  chunked_response_meta.hpp  constexpr_string.hpp  cookies.hpp  error.hpp  form_kvp.hpp  ignore_and_rethrow.hpp  invoke_response.hpp  is_async_generator.hpp  is_awaitable.hpp  is_chunked_response.hpp  is_http_response.hpp  member_function_of.hpp  move_only_function.hpp  pack_element.hpp  rebind_executor.hpp  response_builder.hpp  response_from.hpp  response_from_tag.hpp  result_response.hpp  specialization_of.hpp  super_type.hpp
boost/taar/handler/: htdocs.hpp  rest.hpp  rest_arg.hpp  rest_arg_cast.hpp  rest_arg_cast_tag.hpp  rest_error.hpp
boost/taar/matcher/: context.hpp  cookie.hpp  error.hpp  header.hpp  method.hpp  operand.hpp  target.hpp  template_parser.hpp  version.hpp
boost/taar/matcher/detail/: callable_with.hpp  join_with.hpp  ranges_to.hpp
boost/taar/server/: tcp.hpp
boost/taar/session/: fuzz_http.hpp  http.hpp
boost/taar/type_traits/: always_false.hpp  callable.hpp  has_call_operator.hpp  numeric_type.hpp  specialization_of.hpp  string_like.hpp  super_type.hpp
boost/web/core/: always_false.hpp  awaitable.hpp  callable_traits.hpp  cancellation_signals.hpp  ignore_and_rethrow.hpp  invoke_response.hpp  member_function_of.hpp  rebind_executor.hpp  specialization_of.hpp  super_type.hpp
boost/web/handler/: htdocs.hpp  rest.hpp  rest_arg.hpp  rest_error.hpp
boost/web/matcher/: context.hpp  error.hpp  header.h  header.hpp  matcher_base.h  method.h  method.hpp  operand.hpp  segments_view.hpp  target.h  target.hpp  target_parser.hpp  template_parser.hpp  version.h  version.hpp
boost/web/matcher/detail/: always_false.hpp  callable_traits.hpp  callable_with.hpp  join_with.hpp  ranges_to.hpp  specialization_of.hpp  super_type.hpp
boost/web/server/: tcp.hpp
boost/web/session/: http.hpp
cmake/: clang-tidy.cmake  conan_provider.cmake
examples/: CMakeLists.txt  awaitable_server.cpp  chunked_server.cpp  fuzz_server.cpp  htdocs_server.cpp  http_server.cpp  mixed_server.cpp  response_stream.cpp
test/: CMakeLists.txt  main.cpp  test.cpp  test_async_generator.cpp  test_callable_traits.cpp  test_callable_with.cpp  test_chunk_body_from.cpp  test_chunked_response.cpp  test_constexpr_string.cpp  test_cookies.cpp  test_handler_rest.cpp  test_header.cpp  test_http_session.cpp  test_is_http_response.cpp  test_matcher.cpp  test_matcher_cookie.cpp  test_matcher_header.cpp  test_matcher_method.cpp  test_matcher_operand.cpp  test_matcher_target.cpp  test_matcher_version.cpp  test_member_function_of.cpp  test_method.cpp  test_operand.cpp  test_pack_element.cpp  test_response_builder.cpp  test_response_from.cpp  test_response_from_built_in.cpp  test_response_from_user.cpp  test_rest.cpp  test_rest_arg.cpp  test_rest_arg_cast_builtin.cpp  test_rest_arg_cast_user.cpp  test_result_response.cpp  test_specialization_of.cpp  test_super_type.cpp  test_target.cpp  test_target_parser.cpp  test_tcp_server.cpp  test_template_parser.cpp  (+2 more)
test/type_traits/: test_callable.cpp  test_specialization_of.cpp  test_super_type.cpp
